[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://RedEnemy.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.90909, 3.18998 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.63601, 4.04825 )

[node name="Enemy" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "enabled"
playing = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Jumpbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jumpbox"]
position = Vector2( 0, -8.86112 )
shape = SubResource( 2 )

[node name="Patrol1" type="Position2D" parent="."]
position = Vector2( 0, -45.4545 )

[node name="Patrol2" type="Position2D" parent="."]
position = Vector2( 0, 45.4545 )
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Jumpbox" to="." method="_on_Jumpbox_body_entered"]
